--- a/index.html
+++ b/index.html
@@ -25,18 +25,17 @@
 
         /* 
            ESTRATÉGIA DE IMPRESSÃO - CORREÇÃO DEFINITIVA
-           Para o Recharts funcionar, o elemento PRECISA estar no fluxo de renderização.
-           Usamos opacity: 0.001 em vez de 0 para evitar otimizações agressivas do browser
-           que removem o elemento da árvore de pintura.
+           O portal precisa existir no DOM com dimensões reais para o Recharts calcular os SVGs.
+           Usamos opacity quase 0 e z-index negativo para escondê-lo na tela normal.
         */
         #print-portal {
-            position: fixed;
+            position: absolute; /* Mudado de fixed para absolute para não travar scroll se necessário */
             top: 0;
             left: 0;
-            width: 210mm; /* Largura A4 Fixa */
-            height: auto;
-            z-index: -100; /* Atrás de tudo */
-            opacity: 0.01; /* Quase invisível, mas "existente" para o motor de renderização */
+            width: 210mm;
+            min-height: 100vh;
+            z-index: -50; /* Atrás do conteúdo principal */
+            opacity: 0.01; /* Visível para o motor de renderização, invisível ao olho */
             pointer-events: none;
             background: white;
             overflow: visible;
@@ -62,27 +61,28 @@
             }
             html, body {
                 width: 210mm;
-                height: 100%;
+                min-height: 100%;
                 background: white !important;
                 margin: 0 !important;
                 padding: 0 !important;
                 overflow: visible !important;
             }
             
-            /* Oculta interface do app violentamente */
+            /* Oculta interface do app */
             #root, .print-hidden, header, footer, nav, aside, .fixed, .absolute, button, .modal-overlay, .animate-in {
                 display: none !important;
                 visibility: hidden !important;
                 opacity: 0 !important;
             }
 
-            /* Traz o portal para frente e torna 100% visível */
+            /* Exibe o portal de impressão */
             #print-portal {
-                position: absolute !important;
+                position: absolute !important; /* Absolute permite múltiplas páginas */
                 top: 0 !important;
                 left: 0 !important;
                 width: 210mm !important;
-                min-height: 297mm !important;
+                height: auto !important;
+                min-height: 100% !important;
                 z-index: 9999 !important;
                 opacity: 1 !important;
                 display: block !important;
