feat(nav): Implement conditional menu items and logout confirmation
Introduces a more robust navigation system by conditionally displaying menu items based on user roles. It also adds a confirmation prompt before logging out the user, improving user experience and preventing accidental logouts.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <title>CAPELANIA HAB</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -12,6 +12,13 @@
         .rounded-premium { border-radius: 2.5rem; }
         .no-scrollbar::-webkit-scrollbar { display: none; }
         .no-scrollbar { -ms-overflow-style: none; scrollbar-width: none; }
+        
+        /* Estilo para a navegação mobile rolável */
+        .mobile-nav-container {
+            mask-image: linear-gradient(to right, transparent, black 5%, black 95%, transparent);
+            -webkit-mask-image: linear-gradient(to right, transparent, black 5%, black 95%, transparent);
+        }
+
         #print-portal { position: absolute; top: 0; left: 0; width: 210mm; min-height: 100vh; z-index: -50; opacity: 0.01; pointer-events: none; background: white; overflow: visible; }
         @media print {
             @page { size: A4; margin: 0; }
