--- a/index.html
+++ b/index.html
@@ -13,18 +13,27 @@
         .no-scrollbar::-webkit-scrollbar { display: none; }
         .no-scrollbar { -ms-overflow-style: none; scrollbar-width: none; }
         
-        /* Estilo para a navegação mobile rolável */
         .mobile-nav-container {
             mask-image: linear-gradient(to right, transparent, black 5%, black 95%, transparent);
             -webkit-mask-image: linear-gradient(to right, transparent, black 5%, black 95%, transparent);
         }
 
-        #print-portal { position: absolute; top: 0; left: 0; width: 210mm; min-height: 100vh; z-index: -50; opacity: 0.01; pointer-events: none; background: white; overflow: visible; }
+        /* Estilos de Impressão */
         @media print {
             @page { size: A4; margin: 0; }
-            html, body { width: 210mm; min-height: 100%; background: white !important; margin: 0 !important; padding: 0 !important; overflow: visible !important; }
-            #root, .print-hidden, header, footer, nav, aside, .fixed, .absolute, button { display: none !important; }
-            #print-portal { position: absolute !important; top: 0 !important; left: 0 !important; width: 210mm !important; opacity: 1 !important; display: block !important; visibility: visible !important; z-index: 9999 !important; }
+            body { background: white !important; margin: 0 !important; padding: 0 !important; }
+            .print-hidden, nav, header, button, .no-print { display: none !important; }
+            #printable-report { 
+                width: 210mm !important; 
+                height: 297mm !important; 
+                margin: 0 !important; 
+                padding: 15mm !important; 
+                border: none !important;
+                box-shadow: none !important;
+                position: absolute;
+                top: 0;
+                left: 0;
+            }
         }
     </style>
     <script>
@@ -53,7 +62,6 @@
 </head>
 <body>
     <div id="root"></div>
-    <div id="print-portal"></div>
     <script type="module" src="/index.tsx"></script>
 </body>
 </html>
