--- a/index.html
+++ b/index.html
@@ -6,33 +6,53 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <title>CAPELANIA HAB</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <style>
         body { font-family: 'Plus Jakarta Sans', sans-serif; background-color: #f8fafc; }
         .rounded-premium { border-radius: 2.5rem; }
         .no-scrollbar::-webkit-scrollbar { display: none; }
         .no-scrollbar { -ms-overflow-style: none; scrollbar-width: none; }
         
-        .mobile-nav-container {
-            mask-image: linear-gradient(to right, transparent, black 5%, black 95%, transparent);
-            -webkit-mask-image: linear-gradient(to right, transparent, black 5%, black 95%, transparent);
-        }
-
-        /* Estilos de Impressão */
+        /* Estilos de Impressão Radical para Fidelidade A4 */
         @media print {
-            @page { size: A4; margin: 0; }
-            body { background: white !important; margin: 0 !important; padding: 0 !important; }
-            .print-hidden, nav, header, button, .no-print { display: none !important; }
+            @page { 
+                size: A4 portrait; 
+                margin: 0 !important; 
+            }
+            html, body {
+                width: 210mm;
+                height: 297mm;
+                background: white !important;
+                margin: 0 !important;
+                padding: 0 !important;
+                -webkit-print-color-adjust: exact;
+                print-color-adjust: exact;
+            }
+            .print-hidden, nav, header, button, .no-print, .recharts-legend-wrapper { display: none !important; }
+            #root { margin: 0 !important; padding: 0 !important; }
             #printable-report { 
+                display: block !important;
                 width: 210mm !important; 
                 height: 297mm !important; 
                 margin: 0 !important; 
                 padding: 15mm !important; 
                 border: none !important;
                 box-shadow: none !important;
-                position: absolute;
-                top: 0;
-                left: 0;
+                position: relative !important;
+                top: 0 !important;
+                left: 0 !important;
+                background: white !important;
+                page-break-after: always;
+            }
+            /* Garantir visibilidade dos gráficos Recharts no PDF */
+            .recharts-responsive-container {
+                width: 100% !important;
+                height: 400px !important;
+                visibility: visible !important;
+            }
+            svg {
+                width: 100% !important;
+                height: 100% !important;
             }
         }
     </style>
@@ -41,7 +61,10 @@
             theme: {
                 extend: {
                     colors: { primary: '#005a9c', success: '#22c55e', danger: '#ef4444' },
-                    borderRadius: { 'premium': '2.5rem' }
+                    borderRadius: { 'premium': '2.5rem' },
+                    boxShadow: {
+                      '3xl': '0 35px 60px -15px rgba(0, 0, 0, 0.3)',
+                    }
                 }
             }
         }
@@ -49,13 +72,13 @@
 <script type="importmap">
 {
   "imports": {
-    "react": "https://esm.sh/react@^19.2.3",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "react/": "https://esm.sh/react@^19.2.3/",
+    "react": "https://esm.sh/react@^18.3.1",
+    "react-dom/": "https://esm.sh/react-dom@^18.3.1/",
+    "react/": "https://esm.sh/react@^18.3.1/",
     "@google/genai": "https://esm.sh/@google/genai@^1.34.0",
-    "recharts": "https://esm.sh/recharts@^3.6.0",
-    "vite": "https://esm.sh/vite@^7.3.1",
-    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2"
+    "recharts": "https://esm.sh/recharts@^2.12.7",
+    "vite": "https://esm.sh/vite@^5.3.1",
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^4.3.1"
   }
 }
 </script>
