--- a/index.html
+++ b/index.html
@@ -8,60 +8,41 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <style>
-        body { font-family: 'Plus Jakarta Sans', sans-serif; background-color: #f8fafc; }
-        .rounded-premium { border-radius: 2.5rem; }
+        body { font-family: 'Plus Jakarta Sans', sans-serif; background-color: #f8fafc; margin: 0; padding: 0; }
+        .rounded-premium { border-radius: 2rem; }
         .no-scrollbar::-webkit-scrollbar { display: none; }
         .no-scrollbar { -ms-overflow-style: none; scrollbar-width: none; }
         
-        /* Estilos de Impressão Radical para Fidelidade A4 */
+        /* Estilos de Impressão Profissional */
         @media print {
             @page { 
                 size: A4 portrait; 
-                margin: 0 !important; 
+                margin: 0; 
             }
             html, body {
                 width: 210mm;
-                height: 297mm;
+                height: 100%;
                 background: white !important;
-                margin: 0 !important;
-                padding: 0 !important;
-                -webkit-print-color-adjust: exact;
-                print-color-adjust: exact;
+                -webkit-print-color-adjust: exact !important;
+                print-color-adjust: exact !important;
             }
-            .print-hidden, nav, header, button, .no-print, .recharts-legend-wrapper { display: none !important; }
-            #root { margin: 0 !important; padding: 0 !important; }
-            #printable-report { 
+            #root { display: none !important; }
+            #print-root { 
                 display: block !important;
-                width: 210mm !important; 
-                height: 297mm !important; 
-                margin: 0 !important; 
-                padding: 15mm !important; 
-                border: none !important;
-                box-shadow: none !important;
-                position: relative !important;
-                top: 0 !important;
-                left: 0 !important;
-                background: white !important;
-                page-break-after: always;
+                width: 210mm;
+                margin: 0;
+                padding: 0;
             }
-            /* Garantir visibilidade dos gráficos Recharts no PDF */
-            .recharts-responsive-container {
-                width: 100% !important;
-                height: 400px !important;
-                visibility: visible !important;
-            }
-            svg {
-                width: 100% !important;
-                height: 100% !important;
-            }
+            .no-print { display: none !important; }
         }
+        #print-root { display: none; }
     </style>
     <script>
         tailwind.config = {
             theme: {
                 extend: {
                     colors: { primary: '#005a9c', success: '#22c55e', danger: '#ef4444' },
-                    borderRadius: { 'premium': '2.5rem' },
+                    borderRadius: { 'premium': '2rem' },
                     boxShadow: {
                       '3xl': '0 35px 60px -15px rgba(0, 0, 0, 0.3)',
                     }
@@ -78,13 +59,16 @@
     "@google/genai": "https://esm.sh/@google/genai@^1.34.0",
     "recharts": "https://esm.sh/recharts@^2.12.7",
     "vite": "https://esm.sh/vite@^5.3.1",
-    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^4.3.1"
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^4.3.1",
+    "react-dom": "https://esm.sh/react-dom@^19.2.3"
   }
 }
 </script>
 </head>
 <body>
     <div id="root"></div>
+    <!-- Container isolado para o PDF -->
+    <div id="print-root"></div>
     <script type="module" src="/index.tsx"></script>
 </body>
 </html>
